# cl-spine-leaf

./: .gitignore  README.md  inventory.yaml  lab.yaml  provision.pb.yaml  pyproject.toml
files/leaf1/: frr.conf
files/leaf2/: frr.conf
files/leaf3/: frr.conf
files/leaf4/: frr.conf
files/spine1/: frr.conf
files/spine2/: frr.conf
files/spine3/: daemons  frr.conf
files/spine4/: frr.conf
files/superspine1/: frr.conf
files/superspine2/: frr.conf
group_vars/all/: vars.yaml
group_vars/leaf/: vars.yaml
group_vars/spine/: vars.yaml
group_vars/superspine/: vars.yaml
host_vars/leaf1/: vars.yaml
host_vars/leaf2/: vars.yaml
host_vars/leaf3/: vars.yaml
host_vars/leaf4/: vars.yaml
host_vars/spine1/: vars.yaml
host_vars/spine2/: vars.yaml
host_vars/spine3/: vars.yaml
host_vars/spine4/: vars.yaml
host_vars/superspine1/: vars.yaml
host_vars/superspine2/: vars.yaml
templates/: frr.conf.j2
