[tool.poetry]
name = "cl-spine-leaf"
version = "0.1.0"
description = ""
authors = ["jtdub <amascuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
